# AI_web_helper

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.prod.conf  pyproject.toml  requirements.txt
.github/workflows/: backend-tests.yml  backend_lint.yml  front_lint.yml  frontend-tests.yml
.husky/: pre-commit
backend/: Dockerfile  manage.py  pytest.ini  requirements-test.txt
backend/api/: admin.py  circuit_breaker.py  filters.py  llm_service.py  models.py  s3_service.py  serializers.py  tests.py  urls.py  validators.py  views.py  weather_service.py
backend/api/migrations/: 0001_initial.py  0002_product_image.py
backend/backend/: middleware.py  settings.py  settings_test.py  urls.py
backend/seo/: urls.py  views.py
backend/tests/: conftest.py
backend/tests/e2e/: test_e2e_workflows.py
backend/tests/integration/: test_api_auth.py  test_api_categories.py  test_api_products.py
backend/tests/unit/: test_llm_service.py  test_models.py  (+2 more)
backend/users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
frontend/: .dockerignore  .gitignore  .prettierignore  Dockerfile  Dockerfile.dev  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts  vitest.config.ts
frontend/.husky/: pre-commit
frontend/e2e/: app.spec.ts
frontend/public/: manifest.json  mockServiceWorker.js  sw.js
frontend/src/: App.tsx  main.tsx  style.css
frontend/types/: router.ts
git-hooks/: pre-commit
(+53 files in other folders)
